--- a/index.html
+++ b/index.html
@@ -1,83 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Simple Quiz</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 600px;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: #f2f2f2;
-            border-radius: 10px;
-        }
+  <meta charset="UTF-8">
+  <title>Basic Math Quiz</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 600px;
+      margin: 40px auto;
+      padding: 20px;
+      background-color: #f9f9f9;
+      border-radius: 10px;
+    }
 
-        h1 {
-            text-align: center;
-        }
+    h1 {
+      text-align: center;
+    }
 
-        .question {
-            margin-bottom: 20px;
-        }
+    .question {
+      margin-bottom: 20px;
+    }
 
-        .question h3 {
-            margin-bottom: 10px;
-        }
+    .question h3 {
+      margin-bottom: 10px;
+    }
 
-        .options label {
-            display: block;
-            margin-bottom: 5px;
-        }
+    .options label {
+      display: block;
+      margin-bottom: 5px;
+    }
 
-        button {
-            display: block;
-            margin: 30px auto 0;
-            padding: 10px 20px;
-            font-size: 16px;
-        }
-    </style>
+    button {
+      display: block;
+      margin: 30px auto 0;
+      padding: 10px 20px;
+      font-size: 16px;
+    }
+
+    #result {
+      text-align: center;
+      font-size: 20px;
+      margin-top: 30px;
+      color: green;
+    }
+  </style>
 </head>
 <body>
 
-    <h1>📝 General Knowledge Quiz</h1>
+  <h1>🧮 Basic Math Quiz</h1>
 
-    <form action="#" method="post">
-        <!-- Question 1 -->
-        <div class="question">
-            <h3>1. What is the capital of France?</h3>
-            <div class="options">
-                <label><input type="radio" name="q1" value="a"> London</label>
-                <label><input type="radio" name="q1" value="b"> Berlin</label>
-                <label><input type="radio" name="q1" value="c"> Paris</label>
-                <label><input type="radio" name="q1" value="d"> Madrid</label>
-            </div>
-        </div>
+  <form id="quizForm">
+    <!-- Question 1 -->
+    <div class="question">
+      <h3>1. What is 5 + 3?</h3>
+      <div class="options">
+        <label><input type="radio" name="q1" value="6"> 6</label>
+        <label><input type="radio" name="q1" value="8"> 8</label>
+        <label><input type="radio" name="q1" value="10"> 10</label>
+        <label><input type="radio" name="q1" value="7"> 7</label>
+      </div>
+    </div>
 
-        <!-- Question 2 -->
-        <div class="question">
-            <h3>2. Which planet is known as the Red Planet?</h3>
-            <div class="options">
-                <label><input type="radio" name="q2" value="a"> Earth</label>
-                <label><input type="radio" name="q2" value="b"> Venus</label>
-                <label><input type="radio" name="q2" value="c"> Mars</label>
-                <label><input type="radio" name="q2" value="d"> Jupiter</label>
-            </div>
-        </div>
+    <!-- Question 2 -->
+    <div class="question">
+      <h3>2. What is 9 × 2?</h3>
+      <div class="options">
+        <label><input type="radio" name="q2" value="18"> 18</label>
+        <label><input type="radio" name="q2" value="21"> 21</label>
+        <label><input type="radio" name="q2" value="16"> 16</label>
+        <label><input type="radio" name="q2" value="19"> 19</label>
+      </div>
+    </div>
 
-        <!-- Question 3 -->
-        <div class="question">
-            <h3>3. Who wrote the play "Romeo and Juliet"?</h3>
-            <div class="options">
-                <label><input type="radio" name="q3" value="a"> Charles Dickens</label>
-                <label><input type="radio" name="q3" value="b"> William Shakespeare</label>
-                <label><input type="radio" name="q3" value="c"> Jane Austen</label>
-                <label><input type="radio" name="q3" value="d"> Mark Twain</label>
-            </div>
-        </div>
+    <!-- Question 3 -->
+    <div class="question">
+      <h3>3. What is 12 ÷ 4?</h3>
+      <div class="options">
+        <label><input type="radio" name="q3" value="4"> 4</label>
+        <label><input type="radio" name="q3" value="3"> 3</label>
+        <label><input type="radio" name="q3" value="2"> 2</label>
+        <label><input type="radio" name="q3" value="5"> 5</label>
+      </div>
+    </div>
 
-        <button type="submit">Submit Answers</button>
-    </form>
+    <button type="button" onclick="checkAnswers()">Submit Answers</button>
+  </form>
+
+  <div id="result"></div>
+
+  <script>
+    function checkAnswers() {
+      const answers = {
+        q1: "8",
+        q2: "18",
+        q3: "3"
+      };
+
+      let score = 0;
+
+      for (let key in answers) {
+        const selected = document.querySelector(`input[name="${key}"]:checked`);
+        if (selected && selected.value === answers[key]) {
+          score++;
+        }
+      }
+
+      document.getElementById("result").textContent = `✅ You scored ${score} out of 3`;
+    }
+  </script>
 
 </body>
 </html>
